--- a/view/common/block-template/media-heading-text.phtml
+++ b/view/common/block-template/media-heading-text.phtml
@@ -17,7 +17,7 @@ $filterLocale = (bool) $siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text">
+<div class="block media-text flex-container align-middle align-center">
     <div class="resource-text align-middle padding-1 flex-container flex-dir-column align-middle align-center">
             <?php foreach ($attachments as $attachment): 
                 $render = null;
