Removed redundant youTube element

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -26,7 +26,7 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 
 // Iterate through the media associated with the item
 // Define a base array of media types that should be handled by Octopus Viewer
-$allowedMediaTypes = ['image/jpeg', 'image/png', 'application/pdf', 'youtube'];
+$allowedMediaTypes = ['image/jpeg', 'image/png', 'application/pdf'];
 
 // Iterate through the media associated with the item
 foreach ($itemMedia as $index => $media) {
