--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -43,7 +43,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
             ?>
             <div class="caption"><?php echo $caption; ?></div>
         <?php endif; ?>
-        <div class="metadata">
+        <div class="metadata margin-vertical-1">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == 'item_title'): ?>
             <h2 class="h3"><?php echo $item->displayTitle(); ?></h2>
