--- a/view/common/block-layout/asset-card.phtml
+++ b/view/common/block-layout/asset-card.phtml
@@ -10,7 +10,7 @@ $assetCount = count(array_filter($attachments, function($attachment) {
 $assetColumn = in_array($assetCount, [1, 2, 4]) ? 'asset-column-2' : 'asset-column-3';
 ?>
 
-<div class="assets <?php echo $assetColumn; ?>">
+<div class="assets <?php echo $assetColumn; ?> margin-top-1 latgr-margin-top-2 xlarge-margin-top-3">
   <?php foreach ($attachments as $attachment): ?>
     <?php $asset = $attachment['asset']; ?>
     <div class="asset card">
