--- a/view/common/block-layout/asset-card-legacy.phtml
+++ b/view/common/block-layout/asset-card-legacy.phtml
@@ -53,7 +53,7 @@ $assetColumn = in_array($assetCount, [1, 2, 4]) ? 'asset-column-2' : 'asset-colu
             <?php echo $assetImage; ?>
         <?php endif; ?>
         <?php if ($attachment['caption']): ?>
-        <div class="caption">
+        <div class="caption padding-1">
             <?= $attachment['caption'] ?>
         </div>
         <?php endif; ?>
