Small revisions - not working for multiple files

--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -35,10 +35,10 @@ foreach ($itemMedia as $index => $media) {
     $mediaRenderer = $media->renderer();
     
     // Add a rule to dynamically handle media based on the renderer
-    //if ($mediaRenderer === 'iiif_presentation') {
+    if ($mediaRenderer === 'iiif_presentation') {
         // Add 'iiif' renderer to the allowedMediaTypes dynamically
-    //    $allowedMediaTypes[] = 'iiif_presentation';
-    //}
+    $allowedMediaTypes[] = 'iiif_presentation';
+    }
     if ($mediaRenderer === 'youtube') {
         // Add 'iiif' renderer to the allowedMediaTypes dynamically
         $allowedMediaTypes[] = 'youtube';
@@ -57,7 +57,7 @@ foreach ($itemMedia as $index => $media) {
 
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
         <?php 
-            if (in_array($mediaType, $allowedMediaTypes) || $mediaRenderer === 'youtube') {
+            if (in_array($mediaType, $allowedMediaTypes) || $mediaRenderer === 'youtube' || $mediaRenderer === 'iiif_presentation') {
             //Use Octopus Viewer for supported media types
                 echo $this->octopusViewer()->forItem($item);
                 echo $mediaRenderer;
