--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -1,13 +1,17 @@
 <?php
+$this->headLink()->appendStylesheet($this->assetUrl('css/annona.css')); 
+$this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 $hyperlink = $this->plugin('hyperlink');
+$thumbnailType = $block->dataValue('thumbnail_type');
 ?>
 <div class="full-width file-caption-block resourceTextGrid padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3 margin-vertical-1 large-margin-vertical-2">
     <div class="file file-caption-text media-embed <?php echo $this->escapeHtml(implode(' ', $classes)); ?>">
         <?php foreach($attachments as $attachment): ?>
         <?php $item = $attachment->item(); ?>
-        <div class="item resource">
+        <div class="item resource <?php echo $thumbnailType; ?>">
             <?php
             $media = $attachment->media() ?: $item->primaryMedia();
+            $mediaRenderer = $media->renderer();
             if ($media):
                 if ($mediaDisplay === 'thumbnail') {
                     switch ($link) {
@@ -21,9 +25,9 @@ $hyperlink = $this->plugin('hyperlink');
                             $url = $media->url();
                             break;
                         default:
-                            throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $linkType));
+                        throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $link));
                     }
-                    echo $this->thumbnail($media, $thumbnailType);
+                    echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
                 } else {
                     echo $media->render([
                         'thumbnailType' => $thumbnailType,
