--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -38,7 +38,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
             ?>
             </div>
         </div>
-        <div class="block-html large-padding-horizontal-1 xlarge-padding-horizontal-3">
+        <div class="block-html padding-horizontal-1 xlarge-padding-horizontal-3">
             <?php if ($showTitleOption === 'item_title'): ?>
                 <div class="separator-center metadata">
                     <h2 class="margin-vertical-1 large-margin-vertical-2"><?php echo $item->displayTitle(); ?></h2>
