--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -40,8 +40,11 @@ $thumbnailType = $block->dataValue('thumbnail_type');
         </div>
         <div class="block-html padding-horizontal-1 xlarge-padding-horizontal-3">
             <?php if ($showTitleOption === 'item_title'): ?>
-                <div class="separator-center metadata">
-                    <h2 class="margin-vertical-1 large-margin-vertical-2"><?php echo $item->displayTitle(); ?></h2>
+                <div class="separator-center metadata margin-vertical-1">
+                    <h2><?php echo $item->displayTitle(); ?></h2>
+                    <?php if ($alternative = $item->value('dcterms:alternative')): ?>
+                        <h2 class="italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                    <?php endif; ?>
                 </div>
             <?php elseif ($showTitleOption === 'file_name'): ?>
                 <div class="separator-center metadata">
