--- a/view/common/block-template/media-openseadragon.phtml
+++ b/view/common/block-template/media-openseadragon.phtml
@@ -23,31 +23,44 @@ $lang = $filterLocale ? $this->lang() : null;
 <div class="block media-text">
     <div class="<?= htmlspecialchars($thumbnailType) ?> media file medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="attachments resource-text-openseadragon">
-            <?php foreach ($attachments as $attachment): 
-                $render = null;
-                $title = null;
-                $link = null;
-                $item = $attachment->item();
-                $caption = $attachment->caption();
-                if ($item) {
-                    $media = $attachment->media() ?: $item->primaryMedia();
-                    if ($media) {
-                        echo $media->render([
-                            'thumbnailType' => $thumbnailType,
-                            'link' => $linkType,
-                        ]);
-                        if ($showTitleOption == 'item_title') {
-                            $title = $item->displayTitle(null, $lang);
-                        } elseif ($showTitleOption == 'file_name') {
-                            $title = $media->displayTitle(null, $lang);
+        <?php foreach ($attachments as $attachment): 
+            $title = null;
+            $link = null;
+            $item = $attachment->item();
+            $caption = $attachment->caption();
+            
+            if ($item) {
+                $media = $attachment->media() ?: $item->primaryMedia();
+
+                if ($media) {
+                    // Render the media with specified options
+                    echo $media->render([
+                        'thumbnailType' => $thumbnailType,
+                        'link' => $linkType,
+                    ]);
+
+                    // Determine the title based on the $showTitleOption setting
+                    if ($showTitleOption === 'item_title') {
+                        $title = $item->displayTitle(null, $lang);
+                        $alternative = $item->value('dcterms:alternative');
+                        
+                        if ($alternative) {
+                            echo '<h2 class="italic-font"><small>' . htmlspecialchars($alternative, ENT_QUOTES, 'UTF-8') . '</small></h2>';
                         }
+                    } elseif ($showTitleOption === 'file_name') {
+                        $title = $media->displayTitle(null, $lang);
                     }
                 }
-                ?>
-                <div class="item resource">
-                    <?= $caption ?>
-                </div>
-            <?php endforeach; ?>
+            }
+            ?>
+
+            <div class="item resource">
+                <?php if ($title): ?>
+                    <h3><?= htmlspecialchars($title, ENT_QUOTES, 'UTF-8') ?></h3>
+                <?php endif; ?>
+                <?= htmlspecialchars($caption, ENT_QUOTES, 'UTF-8') ?>
+            </div>
+        <?php endforeach; ?>
         </div>
     </div>
 </div>
