--- a/view/common/block-template/media-caption-text.phtml
+++ b/view/common/block-template/media-caption-text.phtml
@@ -43,7 +43,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <div class="separator-center metadata margin-vertical-1">
                     <h2><?php echo $item->displayTitle(); ?></h2>
                     <?php if ($alternative = $item->value('dcterms:alternative')): ?>
-                        <h2 class="italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                        <h2 class="h3 italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
                     <?php endif; ?>
                 </div>
             <?php elseif ($showTitleOption === 'file_name'): ?>
