--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -35,7 +35,12 @@ $bannerHeightMobile = $this->themeSetting('banner_height_mobile');
 $bannerPosition = ($this->themeSetting('banner_position')) ? str_replace('_', '-', $this->themeSetting('banner_position')) : 'center';
 ?>
 <?php echo $this->doctype(); ?>
-<?php echo $this->htmlElement('html class="no-js"'); ?>
+<?php
+    // Create the <html> element with 'lang' and 'class' attributes
+    echo $this->htmlElement('html')
+        ->setAttribute('lang', $this->lang())
+        ->setAttribute('class', 'no-js');
+?>
     <head>
         <?php echo $this->headMeta(); ?>
         <?php echo $this->headTitle(); ?>
