--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2182,16 +2182,16 @@ grid-template-areas:
   }
 
   /*Card hover colour change*/ 
-  .card a:hover img {
-    opacity: 0.5; /* Adjust opacity for blend effect */
-    background-color: #6b2c91;
-    transition: opacity 0.1s ease;
-    z-index: 1;
-}
+  //.card a:hover img {
+  //  opacity: 0.5; /* Adjust opacity for blend effect */
+  //  background-color: #6b2c91;
+  //  transition: opacity 0.1s ease;
+  //  z-index: 1;
+//}
 
-  .card a:hover {
-  background-color: #6b2c91;
-  }
+//  .card a:hover {
+//  background-color: #6b2c91;
+//  }*/
 
   .assets:has(.asset.card) .card img {
     height: 12rem;
@@ -2233,7 +2233,7 @@ grid-template-areas:
 }
 
 .asset.card {
-  @include card-container($light-gray, $black, 0, 0, rem-calc(4), rgba(149, 157, 165, 0.2) 0px 8px 24px);
+  @include card-container($light-gray, $black, 0, 0, rem-calc(4), rgba(0, 0, 0, 0.35) 0px 5px 15px);
   width: 100%;
   & span.card-divider {
     background: $white;
@@ -2242,6 +2242,29 @@ grid-template-areas:
   & span.h3 {
     color: $black;
   }
+}
+
+.card-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.asset.card:hover .card-image {
+  transform: scale(1.05); /* Slight zoom effect */
+}
+
+.asset.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0); /* No color initially */
+  transition: background-color 0.3s ease; /* Smooth transition */
+  pointer-events: none; /* Makes sure only the image is clickable */
 }
 
 /*Square Thumbnail Styling*/ 
