--- a/view/common/header-dropdown.phtml
+++ b/view/common/header-dropdown.phtml
@@ -28,7 +28,7 @@
     </nav>
 </div>
 <div class="top-bar">
-    <nav class="top-bar-left padding-bottom-1 medium-padding-bottom-0">
+    <nav class="top-bar-left">
         <?php $siteLogo = ($this->themeSetting('logo')) ? '<img src="' . $this->themeSettingAssetUrl('logo') . '" title="Logo" alt="">' : ''; ?>
         <div class="site-title" role="heading" aria-level="2">
             <a href="<?php echo $site->url(); ?>">
