--- a/view/common/block-template/a-hero-image-title-caption.phtml
+++ b/view/common/block-template/a-hero-image-title-caption.phtml
@@ -51,7 +51,7 @@ $title = strlen($attachment['alt_link_title']) ? $attachment['alt_link_title'] :
         
         <?php if (strlen($title)): ?>
         <!-- Display the title as an H1 if $title has content -->
-        <div class="grid-container flex-container align-middle align-left asset-hero-title">
+        <div class="asset-hero-title grid-container flex-container align-middle align-left asset-hero-title">
             <div class="flex-container align-middle">
                 <h1><?= $escape($title) ?></h1>
             </div>
@@ -62,10 +62,8 @@ $title = strlen($attachment['alt_link_title']) ? $attachment['alt_link_title'] :
 
     <?php if (strlen($caption)): ?>
     <!-- Display the caption as a separate section under the hero if $caption has content -->
-    <div class="asset-hero-caption grid-container flex-container align-middle align-left">
-        <div class="flex-container align-middle">
-            <p><?= $isHtmlCaption ? $caption : $escape($caption) ?></p>
-        </div>
+    <div class="asset-hero-caption-bottom grid-container">
+        <p><?= $isHtmlCaption ? $caption : $escape($caption) ?></p>
     </div>
     <?php endif; ?>
 
