--- a/view/common/block-template/html-text.phtml
+++ b/view/common/block-template/html-text.phtml
@@ -6,9 +6,9 @@
 
 ?>
 
-<div class="full-width padding-vertical-1 flex-container">
-    <div class="grid-x grid-container flex-container">
-        <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3">
+<div class="full-width padding-vertical-1">
+    <div class="grid-x grid-container">
+        <div class="padding-vertical-1 large-padding-vertical-2 no-p-margin-bottom">
             <?= $block->dataValue('html', '') ?>
         </div>
     </div>
