Revised Card heading and updated menu background colour

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -97,6 +97,10 @@ header .top-bar-right {
   color: $white;
   }
 
+.top-bar ul ul {
+  background: $secondary-color;
+}
+
 .banner {
   position: relative;
   display: flex;
