--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -2396,9 +2396,9 @@ grid-template-areas:
 
 /*Multiples styling*/ 
 .media-embed-block.layout-vertical.attachment-count-2 .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-2 img,
+.media-embed-block.layout-vertical.attachment-count-2 .file > a > img,
 .media-embed-block.layout-vertical.attachment-count-3 .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-3 img {
+.media-embed-block.layout-vertical.attachment-count-3 .file > a > img {
   height: 40vh!important;
   width: 100%;
 }
@@ -2412,35 +2412,35 @@ grid-template-areas:
 }
 
 .media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium img {
+.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium .file > a > img {
   @include breakpoint(large) {
   height: calc(40vh - .75rem) !important;
 }
 }
 
 .media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium-large .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium-large img {
+.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .medium-large .file > a > img {
   @include breakpoint(large) {
   height: calc(50vh - .75rem) !important;
 }
 }
 
 .media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .large .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .large img {
+.media-embed-block.layout-vertical.attachment-count-2 .resource-text-openseadragon .large .file > a > img {
   @include breakpoint(large) {
   height: calc(60vh - .75rem) !important;
 }
 }
 
 .media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .medium-large .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .medium-large img {
+.media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .medium-large .file > a > img {
   @include breakpoint(large) {
   height: calc(50vh - .75rem) !important;
 }
 }
 
 .media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .large .openseadragon,
-.media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .large img {
+.media-embed-block.layout-vertical.attachment-count-3 .resource-text-openseadragon .large .file > a > img {
   @include breakpoint(large) {
   height: calc(60vh - .75rem) !important;
 }
