--- a/view/common/block-layout/asset-hero-title-caption-side.phtml
+++ b/view/common/block-layout/asset-hero-title-caption-side.phtml
@@ -25,16 +25,16 @@ $escape = $plugins->get('escapeHtml');
 $escapeAttr = $plugins->get('escapeHtmlAttr');
 ?>
 
-<div role="banner" class="asset-hero full-width-css grid-x region-splash">
+<div role="banner" class="asset-hero full-width-css background-colour-uom-footer grid-x region-splash">
     <?php if (!count($attachments)) return; ?>
     <?php $attachment = $attachments[array_rand($attachments)]; ?>
     <?php if (empty($attachment['asset'])) return; ?>
     <div class="small-12 large-7 xlarge-8">
-        <div class="hero-image image-xlarge flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),url(<?= $attachment['asset']->assetUrl() ?>);">
+        <div class="hero-image image-xlarge flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5)),url(<?= $attachment['asset']->assetUrl() ?>);">
         </div>
     </div>
 
-    <div class="small-12 large-5 xlarge-4 flex-container flex-dir-column align-middle align-center colour-scheme-4 text-treatment-2 margin-bottom-0"> 
+    <div class="small-12 large-5 xlarge-4 flex-container flex-dir-column align-middle align-centermargin-bottom-0"> 
 
     <?php if (!empty($heading)) : ?>
         <div class="flex-container"> 
@@ -43,7 +43,7 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
     <?php endif; ?>
 
     <?php if ($attachment['caption']) : ?>
-        <div class="h4 padding-1 large-padding-horizontal-2 xlarge-padding-horizontal-3"><?= $attachment['caption'] ?></div>
+        <div class="padding-1 large-padding-horizontal-2 xlarge-padding-horizontal-3"><?= $attachment['caption'] ?></div>
         <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?> 
         <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
             <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
